# Text2Sql-final

./: .gitignore  Makefile  README.md  TestCases_SQL.xlsx  fast_validation_results_20250831_152326.csv  pyproject.toml  requirements.txt  run_app.py  run_tests.py  validate_with_testcases.py  validation_results_20250831_040105.csv
app/api/: main.py
app/executors/: sqlite_exec.py
app/graph/: nodes.py  pipeline.py
app/guards/: sql_guard.py
app/ui/: streamlit_app.py
app/utils/: audit.py  cache.py  logger.py
setup/: init_db.py
test_results/: README.md  test_results_questions_and_sql.md
tests/: README.md  conftest.py
tests/analysis/: analyze_testcases.py
tests/comprehensive/: test_all_cases.py  test_cache_integration.py  test_llm_integration.py
tests/integration/: test_api.py  test_ui.py
tests/manual/: quick_cache_test.py  run_cache_tests.py
tests/unit/: test_cache.py  test_guards.py  test_ollama.py  test_pipeline.py  test_sql_agent.py
