[project]
name = "local-orchestrator"
version = "0.1.0"
description = "Local Orchestrator for NL → SQL with RBAC, governance, and audit logging"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Adithya Vardhan", email = "you@example.com" }
]

license = { text = "MIT" }

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "streamlit>=1.37.0",
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "sqlglot>=23.0.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "openai>=1.40.0",
  "pandas>=2.3.2",
  "openpyxl>=3.1.5",
  "langchain-ollama>=0.3.7",
  "chromadb>=1.0.20",
  "sentence-transformers>=5.1.0",
  "protobuf>=6.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "black>=24.0.0",
  "ruff>=0.5.0",
]

[tool.uv]
dev-dependencies = ["pytest", "httpx", "black", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 👇 This tells hatch exactly which code dirs to package
[tool.hatch.build.targets.wheel]
packages = ["app"]
